--- a/test/index.html
+++ b/test/index.html
@@ -1,9 +1,58 @@
 <!DOCTYPE html>
+<html lang="en">
 <html>
 <head>
-	<title></title>
+<meta charset="UTF-8">
+<title>Hot Restaurant</title>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="assets/css/style.css">
+<link href="https://fonts.googleapis.com/css?family=Signika|Source+Sans+Pro" rel="stylesheet"> 
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-<h1> It's an Index page.</h1>
+	<header id="main-header">
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-sm-12 col-md-12 col-lg-12">
+					<a href="index.html" id="logo"></a>
+					<ul id="social-media">	
+						<li>Follow Us</li>
+						<li><a id="facebook" href="#"></a></li>
+						<li><a id="instagram" href="#"></a></li>
+						<li><a id="twitter" href="#"></a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</header>
+	<div section id="sub-header">
+		<div class="container-fluid">
+			<div class="row">
+				<img class="img-responsive" src="assets/images/food-salad-restaurant-person.jpg">
+			</div>
+		</div>
+	</div>
+	<div section id="main-content">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-12 col-md-12 col-lg-12 book-table">
+					<h2>We only have 5 tables! Book your seat before they are all gone!</h2>
+					<a href="tables.html"><button type="button" class="btn btn-lg btn-primary">View Tables</button></a>
+					<a href="reservations.html"><button type="button" class="btn btn-lg btn-primary">Make Reservation</button></a>
+				</div>
+			</div>
+		</div>
+	</div>
+	<footer>
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-sm-12 col-md-12 col-lg-12">
+				</div>
+			</div>
+		</div>
+	</footer>
 </body>
 </html>
