--- a/tables.html
+++ b/tables.html
@@ -39,7 +39,10 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-12 col-md-12 col-lg-12 book-table">
-					<!--PUT CODE HERE-->
+					<h2>Current Reservations and Waiting List</h2>
+					<a href="reserve.html"><button type="button" class="btn btn-lg btn-primary">View Tables</button></a>
+					<a href="index.html"><button type="button" class="btn btn-lg btn-primary">Home</button></a>
+						<!--PUT CODE HERE-->
 				</div>
 			</div>
 		</div>
