--- a/reserve.html
+++ b/reserve.html
@@ -39,30 +39,32 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-12 col-md-12 col-lg-12 book-table">
+					<h2>Make Your Reservation</h2>
+					<a href="tables.html"><button type="button" class="btn btn-lg btn-primary">View Tables</button></a>
+					<a href="index.html"><button type="button" class="btn btn-lg btn-primary">Home</button></a>
 					<form role="form">
+						<div class="form-group">
+							<label for="">Name</label>
+							<input type="text" class="form-control" id="reserve_name">
+						</div>
 
-							<div class="form-group">
-								<label for="">Name</label>
-								<input type="text" class="form-control" id="reserve_name">
-							</div>
+						<div class="form-group">
+							<label for="">Phone Number</label>
+							<input type="text" class="form-control" id="reserve_phone">
+						</div>
 
-							<div class="form-group">
-								<label for="">Phone Number</label>
-								<input type="text" class="form-control" id="reserve_phone">
-							</div>
+						<div class="form-group">
+							<label for="">Email</label>
+							<input type="text" class="form-control" id="reserve_email">
+						</div>
 
-							<div class="form-group">
-								<label for="">Email</label>
-								<input type="text" class="form-control" id="reserve_email">
-							</div>
+						<div class="form-group">
+							<label for="">Unique ID</label>
+							<input type="text" class="form-control" id="reserve_uniqueID">
+						</div>
 
-							<div class="form-group">
-								<label for="">Unique ID</label>
-								<input type="text" class="form-control" id="reserve_uniqueID">
-							</div>
-
-							<button type="submit" id="add-btn" class="btn btn-primary submit">Submit</button>
-						</form>
+						<button type="submit" id="add-btn" class="btn btn-primary submit">Submit</button>
+					</form>
 
 				</div>
 			</div>
