--- a/test/tables.html
+++ b/test/tables.html
@@ -17,7 +17,7 @@
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-sm-12 col-md-12 col-lg-12">
-					<a href="index.html" id="logo"></a>
+					<a href="/" id="logo"></a>
 					<ul id="social-media">	
 						<li>Follow Us</li>
 						<li><a id="facebook" href="#"></a></li>
