--- a/tables.html
+++ b/tables.html
@@ -40,8 +40,8 @@
 			<div class="row">
 				<div class="col-sm-12 col-md-12 col-lg-12 book-table">
 					<h2>Current Reservations and Waiting List</h2>
-					<a href="reserve.html"><button type="button" class="btn btn-lg btn-primary">Make Reservation</button></a>
-					<a href="index.html"><button type="button" class="btn btn-lg btn-primary">Home</button></a>
+					<a href="reserve.html"><button type="button" class="btn hot">Make Reservation</button></a>
+					<a href="index.html"><button type="button" class="btn hot">Home</button></a>
 						<!--PUT CODE HERE-->
 				</div>
 			</div>
