--- a/reserve.html
+++ b/reserve.html
@@ -63,7 +63,7 @@
 							<input type="text" class="form-control" id="reserve_uniqueID">
 						</div>
 
-						<button type="submit" id="add-btn" class="btn btn-primary submit">Submit</button>
+						<button type="submit" id="add-btn" class="btn hot">Submit</button>
 					</form>
 
 				</div>
