--- a/index.html
+++ b/index.html
@@ -40,8 +40,10 @@
 			<div class="row">
 				<div class="col-sm-12 col-md-12 col-lg-12 book-table">
 					<h2>We only have 5 tables! Book your seat before they are all gone!</h2>
-					<a href="tables.html"><button type="button" class="btn hot">View Tables</button></a>
-					<a href="reserve.html"><button type="button" class="btn hot">Make Reservation</button></a>
+					<div class="center">
+						<a href="tables.html"><button type="button" class="btn hot">View Tables</button></a>
+						<a href="reserve.html"><button type="button" class="btn hot">Make Reservation</button></a>
+					</div>
 				</div>
 			</div>
 		</div>
