--- a/reserve.html
+++ b/reserve.html
@@ -40,8 +40,10 @@
 			<div class="row">
 				<div class="col-sm-12 col-md-12 col-lg-12 book-table">
 					<h2>Make Your Reservation</h2>
-					<a href="tables.html"><button type="button" class="btn hot">View Tables</button></a>
-					<a href="index.html"><button type="button" class="btn hot">Home</button></a>
+					<div class="center">
+						<a href="tables.html"><button type="button" class="btn hot">View Tables</button></a>
+						<a href="index.html"><button type="button" class="btn hot">Home</button></a>
+					</div>
 					<form role="form">
 						<div class="form-group">
 							<label for="">Name</label>
