updated pathing in html files

--- a/tables.html
+++ b/tables.html
@@ -19,7 +19,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-sm-12 col-md-12 col-lg-12">
-                    <a href="index.html" id="logo"></a>
+                    <a href="/" id="logo"></a>
                     <ul id="social-media">
                         <li>Follow Us</li>
                         <li><a id="facebook" href="#"></a></li>
@@ -43,10 +43,10 @@
                 <div class="col-sm-12 col-md-12 col-lg-12 book-table">
                     <h2>Current Reservations and Waiting List</h2>
                     <div class="center">
-                        <a href="reserve.html">
+                        <a href="/reserve">
                             <button type="button" class="btn hot">Make Reservation</button>
                         </a>
-                        <a href="index.html">
+                        <a href="/">
                             <button type="button" class="btn hot">Home</button>
                         </a>
                     </div>
