--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-sm-12 col-md-12 col-lg-12">
-					<a href="index.html" id="logo"></a>
+					<a href="/" id="logo"></a>
 					<ul id="social-media">	
 						<li>Follow Us</li>
 						<li><a id="facebook" href="#"></a></li>
@@ -41,8 +41,8 @@
 				<div class="col-sm-12 col-md-12 col-lg-12 book-table">
 					<h2>We only have 5 tables! Book your seat before they are all gone!</h2>
 					<div class="center">
-						<a href="tables.html"><button type="button" class="btn hot">View Tables</button></a>
-						<a href="reserve.html"><button type="button" class="btn hot">Make Reservation</button></a>
+						<a href="/tables"><button type="button" class="btn hot">View Tables</button></a>
+						<a href="/reserve"><button type="button" class="btn hot">Make Reservation</button></a>
 					</div>
 				</div>
 			</div>
